external-crates/move/crates/move-compiler/tests/move_check/expansion/duplicate_field_assign.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/expansion/duplicate_field_assign.move:5:9
  │
5 │         S { f, f } = S { f: 0 };
  │         ^^^^^^^^^^
  │         │   │  │
  │         │   │  Duplicate assignment binding given for field 'f'
  │         │   Field previously defined here
  │         Invalid deconstructing assignment

warning[W09003]: unused assignment
  ┌─ tests/move_check/expansion/duplicate_field_assign.move:5:13
  │
5 │         S { f, f } = S { f: 0 };
  │             ^ Unused assignment for variable 'f'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_f')
  │
  = This warning can be suppressed with '#[allow(unused_assignment)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
